# Fractal

./: README  build-local.sh  index.html  params.json
examples/languageModel/run/: textGen.sh  train_wiki.sh
examples/languageModel/src/: Makefile  TextDataSet.cc  TextDataSet.h  langModel.cc
examples/movingAverage/run/: run.sh
examples/movingAverage/src/: Makefile  MovAvgStream.cc  MovAvgStream.h  movAvg.cc
libfractal/: Makefile.in  aclocal.m4  config.h.in  config.h.in~  configure  configure.ac
libfractal/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
libfractal/doc/: Doxyfile  Mainpage.h
libfractal/m4/: ax_check_cuda.m4
libfractal/src/: Makefile.am  Makefile.in  fractal.h
libfractal/src/core/: Connection.cc  Connection.h  CudaKernels.cu  CudaKernels.h  Engine.cc  Engine.h  FractalCommon.h  InitWeightParam.h  Layer.cc  Layer.h  Makefile.am  Makefile.in  Matrix.cc  Matrix.h  Mem.cc  Mem.h  MultiTypeMatrix.cc  MultiTypeMatrix.h  Probe.cc  Probe.h  Rnn.cc  Rnn.h  TrainableProbe.cc  TrainableProbe.h
libfractal/src/probes/: CTCProbe.cc  CTCProbe.h  Makefile.am  Makefile.in  MultiClassifProbe.cc  MultiClassifProbe.h  RegressProbe.cc  RegressProbe.h
libfractal/src/util/: AutoOptimizer.cc  AutoOptimizer.h  BasicLayers.cc  BasicLayers.h  ChannelInfo.h  DataSet.h  DataStream.cc  DataStream.h  Evaluator.cc  Evaluator.h  Makefile.am  Makefile.in  Optimizer.cc  Optimizer.h  Pipe.cc  Pipe.h  PortMap.h  Stream.h
