noinst_LTLIBRARIES = libprobes.la

libprobes_la_SOURCES = CTCProbe.cc \
                       MultiClassifProbe.cc \
                       RegressProbe.cc

includesubdir = $(includedir)/fractal/probes

includesub_HEADERS = CTCProbe.h \
                     MultiClassifProbe.h \
                     RegressProbe.h

