noinst_LTLIBRARIES = libutil.la

libutil_la_SOURCES = AutoOptimizer.cc \
                     BasicLayers.cc \
                     DataStream.cc \
                     Evaluator.cc \
                     Optimizer.cc \
                     Pipe.cc

includesubdir = $(includedir)/fractal/util

includesub_HEADERS = AutoOptimizer.h \
                     BasicLayers.h \
                     ChannelInfo.h \
                     DataSet.h \
                     DataStream.h \
                     Evaluator.h \
                     Optimizer.h \
                     Pipe.h \
                     PortMap.h \
                     Stream.h

